-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.10.1, Lustre 2.11.0
-
None
-
3
-
9223372036854775807
With the ZFS MMP feature landing in 0.7.0-rc5, we should look at enabling this feature for new ZFS pools, if Lustre is formatting the pool or creating a failover OST or MDT dataset there. Originally, I thought this feature would be enabled on all pools, but instead it requires that the multimount property be set on the pool before it is active.
Similar to how mount_utils_ldiskfs.c enables the mmp feature if failover is enabled on the pool, mount_utils_zfs.c should set the multimount property. I believe that this property would be ignored on ZFS 0.6.5 pools, so it is not harmful to always set it for Lustre filesystems.
- is related to
-
LU-976 Test failure for mmp on ZFS filesystems
-
- Closed
-